add imagem e conteiner das informacoes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+
+    <style>
+      .fotoPerfil{
+        width: 250px;
+        height: 250px;
+        object-fit: fill;
+        width: auto;
+        max-width: 100%;
+        border-radius: 50%;
+      }
+
+      img {
+        
+      }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -35,5 +50,17 @@
           </ul>
         </div>
       </nav>
+      <section class="jumbotron text-center">
+        <div class="container">
+            <img class="fotoPerfil" src="https://avatars3.githubusercontent.com/u/41476072?s=460&u=84a504aef52ca8c0d928e9e8f5f22b651b47cf00&v=4">
+          <h1 class="jumbotron-heading">Jéssica Rodrigues</h1>
+          <p class="lead text-muted">Estudante de Sistema de Informação -  Estagiária em desenvolvimento back-end.</p>
+          <p>
+            <a href="#" class="btn btn-dark my-2">
+              Contato</a>
+          </p>
+        </div>
+      </section>
+
 </body>
 </html>
