--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/6f9f9c25f7.js" crossorigin="anonymous"></script>
 
     <style>
       .fotoPerfil{
@@ -20,9 +21,6 @@
         border-radius: 50%;
       }
 
-      img {
-        
-      }
     </style>
 </head>
 <body>
@@ -59,8 +57,68 @@
             <a href="#" class="btn btn-dark my-2">
               Contato</a>
           </p>
+          <a href="https://www.linkedin.com/in/j%C3%A9ssica-rodrigues-97040b151/"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/JessicaRodriguesdc"><i class="fab fa-github"></i></a>
+          <a href="https://www.instagram.com/jessica.rodriguesdc/"><i class="fab fa-instagram"></i></a>
         </div>
       </section>
+
+      <div class="album py-5 bg-light">
+        <div class="container">
+
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22348%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20348%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_171c69af347%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A17pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_171c69af347%22%3E%3Crect%20width%3D%22348%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22116.71875%22%20y%3D%22120.3%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+                <div class="card-body">
+                  <p class="card-text">Este é um projeto de uma API de Vendas desenvolvido em Java.</p>
+
+                  <ul>
+                    <li>Java</li>
+                    <li>Spring Boot</li>
+                    <li>JPA</li>
+                    <li>RestFul</li>
+                    <li>Security</li>
+                    <li>JWT</li>
+                  </ul>
+
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a href="https://github.com/JessicaRodriguesdc/API-Vendas"><button type="button" class="btn btn-sm btn-outline-success">Ver Código</button></a>   
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <section class="jumbotron text-center">
+        <div class="container">
+          <h2 class="jumbotron heading">Sobre mim</h2>
+          <p class="lead">
+            Olá meu nome é Jéssica e atualmente estou estagiándo como desenvolvdora back-end, desenvolvendo projetos em c#(.Net framework e core) e em Java(Spring).
+            apaixonada por cultura geek e gosto de buscar e compartilhar conhecimento.
+          </p>
+        </div>
+      </section>
+
+      <section>
+        <div>
+          <div class="container-fluid">
+            <h3 class="text-center">Disponivel para Oportunidades</h3>
+            <h4 class="text-center">jessicarodridc@gmail.com</h4>
+          </div>
+        </div>
+      </section>
+
+      <footer class="text-center">
+        <div class="footer-copyright text-center text-light bg-dark py-3">
+          © 2020 Desenvolvido por :
+          Jéssica Rodrigues da Costa      
+        </div>
+      </footer>
 
 </body>
 </html>
