--- a/index.html
+++ b/index.html
@@ -5,80 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Pórtifolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/6f9f9c25f7.js" crossorigin="anonymous"></script>
-
-    <style>
-      .jessicaMenu{
-        height: 3em;
-        left: 41%;
-        margin-right: -50%;
-        position: relative 
-      }
-      
-      .fotoPerfil{
-        width: 250px;
-        height: 250px;
-        object-fit: fill;
-        width: auto;
-        max-width: 100%;
-        border-radius: 50%;
-      }
-
-      .corPrincipal{
-        background-color: rgb(235, 74, 74);
-      }
-      .corSecundaria{
-        background-color: rgb(32, 14, 14);
-      }
-
-      p{
-        font-family: Lato, 'Helvetica Neue',Arial, Helvetica, sans-serif;
-        color: black !important;
-      }
-
-      .icones{
-        padding-left: 5px;
-      }
-
-      .titulosBrancos{
-        text-decoration: underline;
-        text-underline-position: below;
-        padding-bottom: 20px;
-        text-transform: uppercase;
-        font-weight: 700;
-        color: aliceblue;
-      }
-
-      .titulosPreto{
-        text-decoration: underline;
-        text-underline-position: below;
-        padding-bottom: 20px;
-        text-transform: uppercase;
-        font-weight: 700;
-        color: rgb(13, 13, 14);
-      }
-
-      .textoBranco{
-        color: aliceblue !important;
-      }
-      .jumbotrom{
-        margin-bottom: 0px;
-      }
-
-      .textoFooter{
-        margin: 0px;
-        padding-top: 30px;
-        padding-bottom: 15px;
-      }
-
-      html{
-        scroll-behavior: smooth;
-      }
-    </style>
 </head>
 <body>
     <nav class="corSecundaria navbar navbar-expand-lg navbar-light">
@@ -125,9 +58,9 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" style="height: 225px; width: 100%; display: block;" src="img/" data-holder-rendered="true">
+                <img class="card-img-top" style="height: 225px; width: 100%; display: block;" src="img/crudEF.jpg" data-holder-rendered="true">
                 <div class="card-body">
-                  <p class="card-text">Este é um projeto de CRUD em Entity framework, com o intuito de aplicar o migrations.</p>
+                  <p class="card-text">Este é um projeto de um CRUD em Entity framework, com o intuito de aplicar o migrations.</p>
                   <ul>
                     <li>C#</li>
                     <li>.Net</li>
@@ -147,7 +80,7 @@
 
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" style="height: 225px; width: 100%; display: block;" src="img/" data-holder-rendered="true">
+                <img class="card-img-top" style="height: 225px; width: 100%; display: block;" src="img/APIVendas.jpg" data-holder-rendered="true">
                 <div class="card-body">
                   <p class="card-text">Este é um projeto de uma API de Vendas desenvolvido em Java.</p>
                   <ul>
@@ -170,9 +103,9 @@
 
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" style="height: 225px; width: 100%; display: block;" src="img/" data-holder-rendered="true">
+                <img class="card-img-top" style="height: 225px; width: 100%; display: block;" src="img/blogDev.PNG" data-holder-rendered="true">
                 <div class="card-body">
-                  <p class="card-text">Este é um projeto de uma Blog sobre notícias do mundo da tecnologia.</p>
+                  <p class="card-text">Este é um projeto de um Blog sobre notícias do mundo da tecnologia.</p>
                   <ul>
                     <li>JavaScript</li>
                     <li>Node.js</li>
@@ -197,7 +130,7 @@
         <div class="container">
           <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
           <p class="lead textoBranco" align="justify">
-            Olá meu nome é Jéssica e atualmente estou estagiándo como desenvolvdora back-end, desenvolvendo projetos em c#(.Net framework e core) e em Java(Spring).
+            Olá meu nome é Jéssica e atualmente estou estagiándo como desenvolvedora back-end, desenvolvendo projetos em c#(.Net framework e core) e em Java(Spring).
             apaixonada por cultura geek e gosto de buscar e compartilhar conhecimento.
           </p>
         </div>
