--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <h2 class="jumbotrom-heading text-center">
             <img class="fotoPerfil" src="https://avatars3.githubusercontent.com/u/41476072?s=460&u=84a504aef52ca8c0d928e9e8f5f22b651b47cf00&v=4">
             <h1 class="jumbotron-heading">Jéssica Rodrigues</h1>
-            <p class="lead textoBranco">Estudante de Sistema de Informação - Desenvolvdora</p>
+            <p class="lead textoBranco">Estudante de Sistema de Informação - Desenvolvedora</p>
             <p>
               <a href="#contato" class="btn btn-dark my-2">
                 Contato</a>
@@ -130,8 +130,7 @@
         <div class="container">
           <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
           <p class="lead textoBranco" align="justify">
-            Olá meu nome é Jéssica e atualmente estou estagiándo como desenvolvedora back-end, desenvolvendo projetos em c#(.Net framework e core) e em Java(Spring).
-            apaixonada por cultura geek e gosto de buscar e compartilhar conhecimento.
+            Olá, sou Jéssica Rodrigues, desenvolvedora, geek e gosto de buscar e compartilhar conhecimento. Atualmente, desenvolvendo projetos em c#(.Net framework e core) e em Java(Spring).
           </p>
         </div>
       </section>
