corrigindo erros e ajustando texto

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Pórtifolio</title>
+    <title>Jéssica Rodrigues</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -26,7 +26,7 @@
                   <a class="nav-link textoBranco" href="#projetos">Projetos</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link textoBranco" href="#sobre-mim">Sobre min</a>
+                <a class="nav-link textoBranco" href="#sobre-mim">Sobre mim</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link textoBranco" href="#contato">Contato</a>
@@ -39,7 +39,7 @@
           <h2 class="jumbotrom-heading text-center">
             <img class="fotoPerfil" src="https://avatars3.githubusercontent.com/u/41476072?s=460&u=84a504aef52ca8c0d928e9e8f5f22b651b47cf00&v=4">
             <h1 class="jumbotron-heading">Jéssica Rodrigues</h1>
-            <p class="lead textoBranco">Estudante de Sistema de Informação - Desenvolvedora</p>
+            <p class="lead textoBranco">| 🎓Student of Information System | 💻 Web Developer | ☕ Back-end developer |</p>
             <p>
               <a href="#contato" class="btn btn-dark my-2">
                 Contato</a>
